test/types/sync/vass/ref-sync-5-blank.good
ref-sync-5-blank.chpl:5: error: unresolved call 'MYPROC(_syncvar(int(64)))'
ref-sync-5-blank.chpl:7: note: candidates are: MYPROC(FORMAL: singleint)
